versions/3.4.0/docs/ProxyProfilePartialUpdate.md
# ProxyProfilePartialUpdate

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**name** | **str** |  | [optional] 
**proxy_generator** | **str** |  | [optional] 
**resolution** | **str** |  | [optional] 
**rate_control** | **int** |  | [optional] 
**crf** | **int** |  | [optional] 
**bitrate** | **int** |  | [optional] 
**audio_bitrate** | **int** |  | [optional] 
**variants_limit** | **int** |  | [optional] 
**enable_dense_filmstrip** | **bool** |  | [optional] 
**enable_watermark** | **bool** |  | [optional] 
**watermark_image** | **str** |  | [optional] 
**watermark_position** | **int** |  | [optional] 
**watermark_opacity** | **float** |  | [optional] 
**watermark_size** | **float** |  | [optional] 
**enable_timecode** | **bool** |  | [optional] 
**timecode_position** | **int** |  | [optional] 
**timecode_opacity** | **float** |  | [optional] 
**timecode_size** | **float** |  | [optional] 
**lut** | **str** |  | [optional] 
**hotfolder_copy_to** | **str** |  | [optional] 
**hotfolder_read_from** | **str** |  | [optional] 
**hotfolder_queue_timeout** | **int** |  | [optional] 
**hotfolder_encode_timeout** | **int** |  | [optional] 
**vantage_workflow_id** | **str** |  | [optional] 
**external_transcoder_staging_path** | **str** |  | [optional] 
**external_transcoder** | **int** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


